--- a/ui/app/components/metadata-kv.hbs
+++ b/ui/app/components/metadata-kv.hbs
@@ -2,8 +2,8 @@
   {{#if this.editing}}
     <td colspan="2">
       <MetadataEditor
-        @kv={{hash key=@key value=@value}}
-        @onEdit={{fn @onKVEdit (hash key=@key value=@value)}}
+        @kv={{hash key=(concat (if @prefix (concat @prefix ".")) @key) value=@value}}
+        @onEdit={{fn @onKVEdit (hash key=(concat (if @prefix (concat @prefix ".")) @key) value=@value)}}
         @constantKey={{true}}
         @autofocusValue={{true}}
         >
@@ -30,7 +30,7 @@
           type="submit"
           class="button is-primary"
           {{on "click" (queue
-            (action @onKVSave (hash key=@key value=@value))
+            (action @onKVSave (hash key=(concat (if @prefix (concat @prefix ".")) @key) value=@value))
             (action (mut this.editing) false)
           )}}
         >
